--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -13,13 +13,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_marginTop="60dp"
-        android:maxHeight="250dp"
-        android:maxWidth="250dp"
+        android:layout_marginTop="20dp"
         android:minHeight="250dp"
         android:minWidth="250dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="false"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/giraff"
+        android:maxHeight="250dp"
+        android:cropToPadding="false"
+        android:adjustViewBounds="true" />
 
     <EditText
         android:layout_width="wrap_content"
