Make sound play when you press the picture

--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -24,7 +24,8 @@
         android:src="@drawable/giraff"
         android:maxHeight="250dp"
         android:cropToPadding="false"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:onClick="speak" />
 
     <EditText
         android:layout_width="wrap_content"
