Change to menu activity when you push finish game

--- a/android/app/src/main/res/layout/activity_end_game.xml
+++ b/android/app/src/main/res/layout/activity_end_game.xml
@@ -27,7 +27,8 @@
         android:id="@+id/EndGameButton"
         android:layout_below="@+id/PlayAgainButton"
         android:layout_centerHorizontal="true"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:onClick="goToMainMenu" />
 
     <TextView
         android:text="TextView"
