Make user able to play again after finished game

--- a/android/app/src/main/res/layout/activity_end_game.xml
+++ b/android/app/src/main/res/layout/activity_end_game.xml
@@ -17,7 +17,8 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/PlayAgainButton"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:onClick="playAgain" />
 
     <Button
         android:text="Avsluta"
