Make play together button change new view

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app=""
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +14,6 @@
         android:layout_height="wrap_content"
         android:text="Spela ensam"
         android:id="@+id/singleplayer_button"
-        android:onClick="singlePlayerStart (MainActivity)"
         android:textSize="30sp"
         style="@style/Widget.AppCompat.Button.Colored"
         android:background="@color/colorAccent"
@@ -23,7 +21,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textAlignment="center"
-        android:minHeight="90dp" />
+        android:minHeight="90dp"
+        android:onClick="singleplayerStart" />
 
     <Button
         android:text="Spela tillsammans"
@@ -37,5 +36,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textAlignment="center"
-        android:minHeight="90dp" />
+        android:minHeight="90dp"
+        android:onClick="multiplayerStart" />
 </RelativeLayout>
