--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -27,16 +27,6 @@
         android:adjustViewBounds="true"
         android:onClick="speak" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Svara"
-        android:id="@+id/answerButton"
-        android:onClick="checkAnswer"
-        android:nestedScrollingEnabled="false"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -64,6 +54,19 @@
         android:layout_marginBottom="55dp"
         android:id="@+id/space"
         android:layout_above="@+id/answerButton"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Svara"
+        android:id="@+id/answerButton"
+        android:onClick="checkAnswer"
+        android:nestedScrollingEnabled="false"
+        android:textSize="24sp"
+        android:textAllCaps="false"
+        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
