--- a/android/app/src/main/res/layout/activity_search_friends.xml
+++ b/android/app/src/main/res/layout/activity_search_friends.xml
@@ -10,13 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="teamtim.teamtimapp.activities.MultiplayerActivity">
 
-    <TextView
-        android:text="Hello friend!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView"
-        android:textSize="30sp"
-        android:textColor="@color/colorAccent" />
+        android:layout_marginBottom="62dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/user_list" />
+    </ScrollView>
 </RelativeLayout>
