--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -27,13 +27,30 @@
         android:adjustViewBounds="true"
         android:onClick="speak" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="EN"
+        android:id="@+id/pefixLabel"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:textSize="25dp"
+        android:layout_marginBottom="20dp" />
+
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/answerButton"
         android:id="@+id/buttonGrid"
-        android:layout_alignTop="@+id/space">
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentRight="false"
+        android:columnCount="10"
+        android:layout_below="@+id/pefixLabel">
+
     </GridLayout>
 
     <LinearLayout
@@ -48,14 +65,6 @@
         android:gravity="bottom|center">
     </LinearLayout>
 
-    <Space
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="55dp"
-        android:id="@+id/space"
-        android:layout_above="@+id/answerButton"
-        android:layout_centerHorizontal="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,7 +74,6 @@
         android:nestedScrollingEnabled="false"
         android:textSize="24sp"
         android:textAllCaps="false"
-        android:layout_marginBottom="30dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
