--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -77,4 +77,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"></GridLayout>
+
 </RelativeLayout>
