--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -69,4 +69,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/imageView"
+        android:layout_alignEnd="@+id/imageView"
+        android:layout_marginBottom="16dp"
+        android:id="@+id/timerText"
+        android:textSize="24sp"
+        android:textColor="@android:color/black" />
+
 </RelativeLayout>
