--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -80,4 +80,24 @@
         android:textSize="24sp"
         android:textColor="@android:color/black" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/playerTwo"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/playerOne"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="18sp" />
+
 </RelativeLayout>
