--- a/android/app/src/main/res/layout/activity_category.xml
+++ b/android/app/src/main/res/layout/activity_category.xml
@@ -22,10 +22,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/category_layout"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"></LinearLayout>
+            android:id="@+id/category_layout"></LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
