Make socket close when game is over and open EndMultiplayerActivity

--- a/android/app/src/main/res/layout/activity_end_game.xml
+++ b/android/app/src/main/res/layout/activity_end_game.xml
@@ -45,17 +45,6 @@
         android:textColor="@android:color/holo_orange_dark" />
 
     <Button
-        android:text="Avsluta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
-        android:id="@+id/EndGameButton"
-        android:textSize="24sp"
-        android:onClick="goToMainMenu"
-        android:layout_below="@+id/PlayAgainButton"
-        android:layout_centerHorizontal="true" />
-
-    <Button
         android:text="visa resultat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,5 +54,16 @@
         android:layout_centerHorizontal="true"
         android:onClick="showResult"
         android:textSize="24sp" />
+
+    <Button
+        android:text="Avsluta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="21dp"
+        android:id="@+id/EndGameButton"
+        android:textSize="24sp"
+        android:onClick="goToMainMenu"
+        android:layout_below="@+id/showResultButton"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
