--- a/android/app/src/main/res/layout/activity_end_multiplayer.xml
+++ b/android/app/src/main/res/layout/activity_end_multiplayer.xml
@@ -65,4 +65,38 @@
         android:layout_alignBottom="@+id/textView11"
         android:layout_alignLeft="@+id/their_score"
         android:layout_alignStart="@+id/their_score" />
+
+    <Button
+        android:text="Avsluta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_marginBottom="0dp"
+        android:layout_alignParentBottom="false"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"
+        android:layout_below="@+id/button3"
+        android:layout_marginTop="20dp"
+        android:onClick="endGame" />
+
+    <Button
+        android:text="Spela igen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:textSize="24sp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="playAgain" />
+
+    <Button
+        android:text="Visa resultat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:textSize="24sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/button2"
+        android:onClick="showResult" />
 </RelativeLayout>
