--- a/android/app/src/main/res/layout/activity_result.xml
+++ b/android/app/src/main/res/layout/activity_result.xml
@@ -15,13 +15,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView3"
-        android:textAlignment="center"
         android:textStyle="normal|bold"
-        android:textSize="32sp"
+        android:textSize="30sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif"
-        android:textColor="?attr/colorControlActivated" />
+        android:textColor="?attr/colorControlActivated"
+        android:textAlignment="center" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -40,13 +40,22 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:text="Rätt svar"
+                    android:text="Ditt svar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView10"
                     android:layout_weight="1"
-                    android:textAlignment="textStart"
-                    android:textSize="24sp" />
+                    android:textAlignment="center"
+                    android:textSize="21sp" />
+
+                <TextView
+                    android:text="Rätt svar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView4"
+                    android:layout_weight="1"
+                    android:textSize="21sp"
+                    android:textAlignment="center" />
 
             </LinearLayout>
         </LinearLayout>
