--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -108,10 +108,17 @@
         android:textColor="@android:color/holo_green_dark"
         android:textSize="18sp" />
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"></GridLayout>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:layout_row="0"
+        android:layout_column="21"
+        android:background="@drawable/ic_hearing_black_36dp"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignRight="@+id/imageView"
+        android:layout_alignEnd="@+id/imageView"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp" />
 
 </RelativeLayout>
