--- a/android/app/src/main/res/layout/activity_play.xml
+++ b/android/app/src/main/res/layout/activity_play.xml
@@ -69,12 +69,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="7dp"
         android:id="@+id/timerText"
         android:textSize="24sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:layout_alignRight="@+id/playerOne"
+        android:layout_alignEnd="@+id/playerOne"
+        android:layout_alignParentEnd="false" />
 
     <TextView
         android:layout_width="wrap_content"
