--- a/android/app/src/main/res/layout/activity_result.xml
+++ b/android/app/src/main/res/layout/activity_result.xml
@@ -47,7 +47,8 @@
                     android:id="@+id/textView10"
                     android:layout_weight="1"
                     android:textAlignment="center"
-                    android:textSize="21sp" />
+                    android:textSize="21sp"
+                    android:gravity="center" />
 
                 <TextView
                     android:text="Rätt svar"
@@ -56,7 +57,8 @@
                     android:id="@+id/textView4"
                     android:layout_weight="1"
                     android:textSize="21sp"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:gravity="center" />
 
             </LinearLayout>
 
